# vATerminal

./: .gitignore  README.md  configure.ac
src/: Makefile.am  vaterminal.gresource.xml  vaterminal.vala
